feat(trainer-summary): implement MongoDB schema, repository, and service for training summary
- Added TrainerTrainingSummary MongoDB schema with fields:
  - trainerUsername, trainerFirstName, trainerLastName, trainerStatus
  - years -> months -> trainingsSummaryDuration
- Implemented repository for searching and updating trainer documents by username
- Created service to process incoming training events:
  - Extracts trainer record by username
  - Creates new record if not exist with year/month from training date
  - Updates trainingsSummaryDuration using training duration
  - Saves updated value back to MongoDB
- Added MongoDB index on trainerFirstName and trainerLastName for optimized search
- Implemented required validations and type constraints:
  - trainingsSummaryDuration as number
  - trainerStatus as boolean
- Integrated proper logging:
  - Transaction level logs
  - Operation-level logs with transactionId
- Covered functionality with unit tests